--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ mono: none
 before_install:
   - sudo apt-get install nunit-console
 before_script:
-  - nuget restore ext_compiler.sln
+  - dotnet restore ext_compiler.sln
 after_script:
   - dotnet publish ext_compiler_tests/ /p:Configuration=Release
   - nunit-console ext_compiler_tests/bin/Release/netcoreapp2.1/publish/ext_compiler_tests.dll
