--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - sudo apt-get install nunit-console
 before_script:
   - dotnet restore ext_compiler.sln
-after_script:
+script:
   - dotnet publish ext_compiler_tests/ /p:Configuration=Release
   - nunit-console ext_compiler_tests/bin/Release/netcoreapp2.1/publish/ext_compiler_tests.dll
