--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,17 @@ solution: ext_compiler.sln
 dotnet: 2.1.502
 mono: none
 
+
+
 before_install:
   - sudo apt-get install nunit-console
-before_script:
+
+install:
   - dotnet restore ext_compiler.sln
+
 script:
+  - dotnet build ext_compiler.sln -c Release
   - dotnet publish ext_compiler_tests/ /p:Configuration=Release
+
+after_script:
   - nunit-console ext_compiler_tests/bin/Release/netcoreapp2.1/publish/ext_compiler_tests.dll
