--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ install:
 
 script:
   - dotnet build ext_compiler.sln -c Release
-  - dotnet publish ext_compiler_tests/ /p:Configuration=Release
 
 after_script:
-  - dotnet test ext_compiler_tests/bin/Release/netcoreapp2.1/publish/ext_compiler_tests.dll
+  - dotnet test ext_compiler.sln
