--- a/ext_pp_tests/ext_pp_tests.csproj
+++ b/ext_pp_tests/ext_pp_tests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ext_compiler\ext_compiler.csproj" />
+    <ProjectReference Include="..\ext_pp\ext_pp.csproj" />
   </ItemGroup>
 
 </Project>
