Implemented ADL.Crash for better debug output.

--- a/ext_pp/ext_pp.csproj
+++ b/ext_pp/ext_pp.csproj
@@ -17,6 +17,9 @@
     <Reference Include="ADL">
       <HintPath>res\ADL.dll</HintPath>
     </Reference>
+    <Reference Include="ADL.Crash">
+      <HintPath>res\ADL.Crash.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
