--- a/ext_pp_cli/ext_pp_cli.csproj
+++ b/ext_pp_cli/ext_pp_cli.csproj
@@ -1,17 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ext_pp\ext_pp.csproj" />
     <ProjectReference Include="..\ext_pp_base\ext_pp_base.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="ADL">
       <HintPath>..\ext_pp\res\ADL.dll</HintPath>
-      <Private>true</Private>
+    </Reference>
+    <Reference Include="ADL.Crash">
+      <HintPath>..\ext_pp\res\ADL.Crash.dll</HintPath>
     </Reference>
   </ItemGroup>
 
