--- a/ext_pp_tests/ext_pp_tests.csproj
+++ b/ext_pp_tests/ext_pp_tests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ext_pp\ext_pp.csproj" />
+    <ProjectReference Include="..\ext_pp_plugins\ext_pp_plugins.csproj" />
   </ItemGroup>
 
 </Project>
