--- a/ext_pp_cli/ext_pp_cli.csproj
+++ b/ext_pp_cli/ext_pp_cli.csproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <StartupObject>ext_pp_cli.CLI</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ext_pp\ext_pp.csproj" />
     <ProjectReference Include="..\ext_pp_base\ext_pp_base.csproj" />
+    <ProjectReference Include="..\ext_pp_plugins\ext_pp_plugins.csproj" />
   </ItemGroup>
 
   <ItemGroup>
