--- a/ext_pp_cli/ext_pp_cli.csproj
+++ b/ext_pp_cli/ext_pp_cli.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <StartupObject>ext_pp_cli.CLI</StartupObject>
+    <Version>0.0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
