--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ script:
 
 after_script:
   - dotnet test $SOLUTION
-  - bash < curl -s https://codecov.io/bash
+  - bash <(curl -s https://codecov.io/bash)
