ExtPP is now completely .net standard except ext_pp_cli, which was changed from net core to net framework.

--- a/ext_pp_cli_core/ext_pp_cli_core.csproj
+++ b/ext_pp_cli_core/ext_pp_cli_core.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CommandRunner\CommandRunner\CommandRunner.csproj" />
+    <ProjectReference Include="..\ext_pp_base\ext_pp_base.csproj" />
+    <ProjectReference Include="..\ext_pp\ext_pp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="ADL">
       <HintPath>..\ext_pp\res\ADL.dll</HintPath>
     </Reference>
