Added "TravisRelease" build configuration that leaves out the .net framework builds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ matrix:
       mono: none
       env:
         - SOLUTION="ext_pp.sln"
-        - BUILDCONFIG="Release"
+        - BUILDCONFIG="TravisRelease"
 
 install:
   - dotnet restore 
